--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="twitter:description" content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
     <meta name="twitter:title" content="Yang2020 - Andrew Yang for President" />
     <meta name="twitter:image" content="https://andrewyangpdxfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
+    <meta name="twitter:creator" content="@ericcurtis" />
+    <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
   </head>
   <body>
     <div class="background-image"></div>
