--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
     <meta name="description" content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
     <meta property="og:site_name" content="Andrew Yang for President" />
-    <meta property="og:image" content="https://andrewyangpdxfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
+    <meta property="og:image" content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://andrewyangpdxfan.com" />
+    <meta property="og:url" content="https://andrewyangfan.com" />
     <meta property="og:title" content="Yang2020 - Andrew Yang for President" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
     <meta name="twitter:title" content="Yang2020 - Andrew Yang for President" />
-    <meta name="twitter:image" content="https://andrewyangpdxfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
+    <meta name="twitter:image" content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
   </head>
