--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Humanity First - Andrew Yang for President</title>
+    <title>Learn about Andrew Yang's Humanity-First Platform</title>
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
     <meta name="description" content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
-    <meta property="og:site_name" content="Andrew Yang for President" />
+    <meta property="og:site_name" content="Learn about Andrew Yang's Humanity First Platform" />
     <meta property="og:image" content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangfan.com" />
-    <meta property="og:title" content="Humanity First - Andrew Yang for President" />
+    <meta property="og:title" content="Learn about Andrew Yang's Humanity-First Platform" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First." />
-    <meta name="twitter:title" content="Humanity First - Andrew Yang for President" />
+    <meta name="twitter:title" content="Learn about Andrew Yang's Humanity-First Platform" />
     <meta name="twitter:image" content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png" />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
@@ -43,7 +43,10 @@
             Make America Think Harder
           </h1>
           <p>Friends, I have taken some time this summer to learn about the canidates for the 2020 election and <a href="http://yang2020.com" title="Andrew Yang for President">Andrew Yang</a> really stands out.</p>
-          <p><strong>I urge you to take 30 minutes to learn about Andrew Yang’s vision.</strong></p>
+
+          <p class="goal">
+            I wanted to make it as easy as possible for you to learn about Andrew Yang. In the first video, which is only 11 minutes, you can watch Andrew lay out his vision for how we need to transform our economy into a trickle-up, human-centered system.
+          </p>
 
           <p>I do think he will win if his message gets out, and we need to make sure other politicians see how excited people are about his vision of <a href="https://www.yang2020.com/policies/human-capitalism/" title="Human centered capitalism">Human-centered Capitalism</a>.</p>
 
