--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h1>
             Make America Think Harder
           </h1>
-          <p>Friends, I have taken some time this summer to learn about the canidates for the 2020 election and <a href="http://yang2020.com" title="Andrew Yang for President">Andrew Yang</a> really stands out.</p>
+          <p>Friends, I have taken some time this summer to learn about the candidates for the 2020 election and <a href="http://yang2020.com" title="Andrew Yang for President">Andrew Yang</a> really stands out.</p>
 
           <p class="goal">
             I wanted to make it as easy as possible for you to learn about Andrew Yang. In the first video, which is only 11 minutes, you can watch Andrew lay out his vision for how we need to transform our economy into a trickle-up, human-centered system.
