--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <section class="videos">
           <iframe width="300" height="200" src="https://www.youtube.com/embed/RYKqQOVBSYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+          <iframe width="300" height="200" src="https://www.youtube.com/embed/mSiF4vrqFUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
           <iframe width="300" height="200" src="https://www.youtube.com/embed/kzvi4QBBnec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
       </div>
