Add link to fd-math

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
           <iframe width="300" height="200" src="https://www.youtube.com/embed/kzvi4QBBnec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-          <!-- <iframe width="300" height="200" src="https://www.youtube.com/embed/CRaJE4wTRQc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <p class="goal" style="background-color: rgba(220, 20, 60, 0.233);">When I talk about Andrew Yang's platform a lot of people are curious about the math behind the Freedom Dividend. <a href="https://freedom-dividend.com/">Here is a site that breaks it down! </a></p>
         </section>
       </div>
     </div>
