Add debate performances and shift text

--- a/index.html
+++ b/index.html
@@ -109,11 +109,10 @@
             the most important vision a presidential candidate has expressed in
             my lifetime.
           </p>
-          <p class="goal" style="background-color: rgba(220, 20, 60, 0.233);">
-            When I talk about Andrew Yang's platform a lot of people are curious
-            about the math behind the Freedom Dividend.
+          <p class="goal fdmath-link" style="background-color: rgba(220, 20, 60, 0.233);">
+            Curious about the math behind the Freedom Dividend?<br />
             <a href="https://freedom-dividend.com/"
-              >Here is a site that breaks it down!
+              >Freedom-dividend.com breaks it down (spoiler it works out)!
             </a>
           </p>
         </section>
@@ -198,127 +197,49 @@
     </div>
 
     <div class="main-content lower-content">
-      <section class="lower-text-content">
-        <div>
-          <h2>
-            But Candidate X is better!
-          </h2>
-          <p>
-            I like all of the candidates, but we need more out-of-the box
-            thinking. Andrew’s three main policies create a strong economic base
-            for all Americans.
-          </p>
+      <section class="long-form-videos">
+        <h2>Debate Performances:</h2>
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/6crg579lpds"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
 
-          <ul>
-            <li>
-              <a
-                href="https://www.yang2020.com/policies/the-freedom-dividend/"
-                title="Freedom Dividend"
-                >Freedom Dividend</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.yang2020.com/policies/medicare-for-all/"
-                title="Medicare for all"
-                >Medicare for all</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.yang2020.com/policies/human-capitalism/"
-                title="Human-centered Capitalism"
-                >Human-centered Capitalism</a
-              >
-            </li>
-          </ul>
-
-          <p>
-            This foundation will enable us to tackle climate and technology
-            changes more effectively.
-          </p>
-        </div>
-
-        <div>
-          <h2>
-            Where can I learn more?
-          </h2>
-          <p>
-            His social media and website. His site details over
-            <a
-              href="https://www.yang2020.com/policies/"
-              title="Andrew Yang's policies"
-              >150 policies</a
-            >
-            and
-            <a
-              href="https://www.yang2020.com/meet-andrew/"
-              title="Andrew's story"
-              >the story</a
-            >
-            of why he is running for president.
-          </p>
-
-          <h2>
-            Social Media
-          </h2>
-          <ul class="social-links">
-            <li>
-              <a
-                href="https://www.facebook.com/andrewyang2020/"
-                title="Andrew Yang for President 2020 Home on Facebook"
-                >Facebook</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://twitter.com/andrewyang"
-                title="Andrew Yang (@AndrewYang) | Twitter"
-                >Twitter</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.youtube.com/channel/UCriIuQZpMi6gEt_2P7xKCww?disable_polymer=true"
-                title="Andrew Yang for President 2020 - YouTube"
-                >Youtube</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.instagram.com/andrewyang2020/"
-                title="Andrew Yang for President 2020 (@andrewyang2020)"
-                >Instagram</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.snapchat.com/add/andrewyang2020"
-                title="Latest Story on Snapchat"
-                >Snapchat</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.reddit.com/r/YangForPresidentHQ/"
-                title="Andrew Yang on Reddit"
-                >Reddit</a
-              >
-            </li>
-          </ul>
-        </div>
-
-        <div>
-          <h2>Why this site?</h2>
-          <p>
-            I wanted to create something to help Andrew Yang run for president,
-            and anyone interested in sharing his message. Feel free to share the
-            link.
-          </p>
-          <p>
-            Thank you to the content creators of the work I included.
-          </p>
-        </div>
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/LVkCfCQDXe8"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/3siHgkArebE"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/sSbou44OUHg"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/eA-69bxpWfs"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </section>
       <section class="long-form-videos">
         <h2>
@@ -379,6 +300,92 @@
         ></iframe>
       </section>
     </div>
+
+    <div class="color-band">
+      <div class="main-content">
+        <section class="text-content">
+          <h2>Why this site?</h2>
+          <p>
+            I wanted to create something to help Andrew Yang run for president,
+            and anyone interested in sharing his message. Feel free to share the
+            link.
+          </p>
+          <p>
+            Thank you to the content creators of the work I included.
+          </p>
+        </section>
+
+        <section class="text-content">
+          <h2>
+            Where can I learn more?
+          </h2>
+          <p>
+            His social media and website. His site details over
+            <a
+              href="https://www.yang2020.com/policies/"
+              title="Andrew Yang's policies"
+              >150 policies</a
+            >
+            and
+            <a
+              href="https://www.yang2020.com/meet-andrew/"
+              title="Andrew's story"
+              >the story</a
+            >
+            of why he is running for president.
+          </p>
+
+          <h2>
+            Yang's Social Media Links
+          </h2>
+          <ul class="social-links">
+            <li>
+              <a
+                href="https://www.facebook.com/andrewyang2020/"
+                title="Andrew Yang for President 2020 Home on Facebook"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://twitter.com/andrewyang"
+                title="Andrew Yang (@AndrewYang) | Twitter"
+                >Twitter</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCriIuQZpMi6gEt_2P7xKCww?disable_polymer=true"
+                title="Andrew Yang for President 2020 - YouTube"
+                >Youtube</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/andrewyang2020/"
+                title="Andrew Yang for President 2020 (@andrewyang2020)"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.snapchat.com/add/andrewyang2020"
+                title="Latest Story on Snapchat"
+                >Snapchat</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.reddit.com/r/YangForPresidentHQ/"
+                title="Andrew Yang on Reddit"
+                >Reddit</a
+              >
+            </li>
+          </ul>
+        </section>
+      </div>
+    </div>
+
     <footer>
       <div class="main-content">
         Tweet at @EricCurtis with any suggestions, questions, or comments.
