Update top blurb

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           </p>
 
           <p class="goal">
-            I wanted to make it as easy as possible for you to learn about
-            Andrew Yang. In the first video, which is only 11 minutes, you can
-            watch Andrew lay out his vision for how we need to transform our
-            economy into a trickle-up, human-centered system.
+            I wanted to make it as easy as possible for everyone to learn about
+            Andrew Yang. The first video, which is only 11 minutes, is a great
+            introduction to his vision.
           </p>
 
           <p>
@@ -109,7 +108,10 @@
             the most important vision a presidential candidate has expressed in
             my lifetime.
           </p>
-          <p class="goal fdmath-link" style="background-color: rgba(220, 20, 60, 0.233);">
+          <p
+            class="goal fdmath-link"
+            style="background-color: rgba(220, 20, 60, 0.233);"
+          >
             Curious about the math behind the Freedom Dividend?<br />
             <a href="https://freedom-dividend.com/"
               >Freedom-dividend.com breaks it down (spoiler it works out)!
