--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
           </p>
 
           <p class="goal">
-            I wanted to make it as easy as possible for everyone to learn about
-            Andrew Yang. The first video, which is only 11 minutes, is a great
-            introduction to his vision.
+            Short on time? Great news the first video is only 11 minutes and is
+            a great introduction to Andrew's vision.
           </p>
 
           <p>
