--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <iframe
             width="300"
             height="200"
-            src="https://www.youtube.com/embed/GkepAtjSJLI?start=52"
+            src="https://www.youtube.com/embed/GkepAtjSJLI"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
