--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           </p>
 
           <p class="goal">
-            Short on time? Great news the first video is only 12 minutes and is
-            a great introduction to Andrew's vision.
+            Short on time? Good news the first video is only 12 minutes and is a
+            great introduction to Andrew's vision.
           </p>
 
           <p>
@@ -247,6 +247,7 @@
         <h2>
           Just a few of many long-form interviews:
         </h2>
+
         <!-- Joe Rogan -->
         <iframe
           width="300"
