--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:site_name"
-      content="Learn about Andrew Yang's Humanity First Platform"
+      content="An Introduction to Andrew Yang and his Platform"
     />
     <meta
       property="og:image"
@@ -41,7 +41,7 @@
     <meta property="og:url" content="https://andrewyangfan.com" />
     <meta
       property="og:title"
-      content="Learn about Andrew Yang's Humanity-First Platform"
+      content="An Introduction to Andrew Yang and his Platform"
     />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
