add bcard to footer and new video

--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
             Does he have a shot at winning?
           </h2>
           <p>
-            He is in a great spot. A few days ago I saw a comparison to Bill
-            Clinton’s run in 1992 and he is polling at the same levels.
+            He is in a great spot.
           </p>
           <p>
-            Iowa and New Hampshire do not even vote until early 2020. However,
-            much of the main-stream media decided not to cover him initially.
+            Iowa and New Hampshire do not even vote until early 2020 and they
+            often select someone surprising, like Obama. However, much of the
+            main-stream media decided not to cover him initially.
           </p>
           <p>
             This has changed, but I think for him to win
@@ -270,9 +270,19 @@
 
         <!-- Useful Idiots -->
         <iframe
-          width="560"
-          height="315"
+          width="300"
+          height="200"
           src="https://www.youtube.com/embed/iKuZppYwnq4"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+
+        <!-- Des Moines Reg -->
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/72fXyHzaNZ4"
           frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
@@ -407,7 +417,10 @@
 
     <footer>
       <div class="main-content">
-        Tweet at @EricCurtis with any suggestions, questions, or comments.
+        Tweet at @EricCurtis with any suggestions, questions, or comments.<br /><br />
+        <a href="assets/YouTube-Andrew-Business-card.pdf">
+          File to print a business card point users to this site.
+        </a>
       </div>
     </footer>
   </body>
