--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
       <div class="main-content">
         Tweet at @EricCurtis with any suggestions, questions, or comments.<br /><br />
         <a href="assets/YouTube-Andrew-Business-card.pdf">
-          File to print a business card point users to this site.
+          Click here to download a PDF file for a business card pointing users
+          to this site.
         </a>
       </div>
     </footer>
