--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png"
+      content="https://andrewyangfan.com/assets/social-thumb.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangfan.com" />
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://andrewyangfan.com/assets/yang_crowd_alt_landing_page-1024x610.png"
+      content="https://andrewyangfan.com/assets/social-thumb.jpg"
     />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
