--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://andrewyangfan.com/assets/social-thumb.jpg"
+      content="https://andrewyangfan.com/assets/social-thumb.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangfan.com" />
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://andrewyangfan.com/assets/social-thumb.jpg"
+      content="https://andrewyangfan.com/assets/social-thumb.png"
     />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
@@ -161,10 +161,10 @@
           <p>
             Iowa and New Hampshire do not even vote until early 2020 and they
             often select someone surprising, like Obama. However, much of the
-            main-stream media decided not to cover him initially.
+            main-stream media has not covered him in a fair manner.
           </p>
           <p>
-            This has changed, but I think for him to win
+            For him to win
             <strong>WE</strong> will need to share Andrew’s vision with as many
             people as we can.
           </p>
