--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     />
     <meta
       property="og:image"
-      content="https://andrewyangfan.com/assets/social-thumb.png"
+      content="https://andrewyangintro.com/assets/social-thumb.png"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://andrewyangfan.com" />
+    <meta property="og:url" content="https://andrewyangintro.com" />
     <meta
       property="og:title"
       content="An Introduction to Andrew Yang and his Platform"
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://andrewyangfan.com/assets/social-thumb.png"
+      content="https://andrewyangintro.com/assets/social-thumb.png"
     />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
