Update Title and Description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-148759407-1"
@@ -27,11 +26,11 @@
     />
     <meta
       name="description"
-      content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
+      content="A collection of popular Andrew Yang YouTube videos. Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join our fight to put Humanity First."
     />
     <meta
       property="og:site_name"
-      content="An Introduction to Andrew Yang and his Platform"
+      content="collection of popular Andrew Yang YouTube videos"
     />
     <meta
       property="og:image"
@@ -41,18 +40,18 @@
     <meta property="og:url" content="https://andrewyangintro.com" />
     <meta
       property="og:title"
-      content="An Introduction to Andrew Yang and his Platform"
+      content="collection of popular Andrew Yang YouTube videos"
     />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:description"
-      content="The Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
+      content="A collection of popular Andrew Yang YouTube videos. Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
     />
     <meta
       name="twitter:title"
-      content="Learn about Andrew Yang's Humanity-First Platform"
+      content="collection of popular Andrew Yang YouTube videos"
     />
     <meta
       name="twitter:image"
