--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:site_name"
-      content="collection of popular Andrew Yang YouTube videos"
+      content="A collection of popular Andrew Yang YouTube videos"
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
     <meta property="og:url" content="https://andrewyangintro.com" />
     <meta
       property="og:title"
-      content="collection of popular Andrew Yang YouTube videos"
+      content="A collection of popular Andrew Yang YouTube videos"
     />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
@@ -51,7 +51,7 @@
     />
     <meta
       name="twitter:title"
-      content="collection of popular Andrew Yang YouTube videos"
+      content="A collection of popular Andrew Yang YouTube videos"
     />
     <meta
       name="twitter:image"
