--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       name="description"
-      content="A collection of popular Andrew Yang YouTube videos. Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join our fight to put Humanity First."
+      content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join our fight to put Humanity First."
     />
     <meta
       property="og:site_name"
@@ -34,7 +34,7 @@
     />
     <meta
       property="og:image"
-      content="https://andrewyangintro.com/assets/social-thumb.png"
+      content="https://andrewyangintro.com/assets/social-thumb-videos.png"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangintro.com" />
@@ -47,7 +47,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:description"
-      content="A collection of popular Andrew Yang YouTube videos. Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
+      content="Learn about the Freedom Dividend, a universal basic income of $1000/mo. Medicare for All. Human-Centered Capitalism. Join Andrew Yang's fight to put Humanity First."
     />
     <meta
       name="twitter:title"
@@ -55,7 +55,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://andrewyangintro.com/assets/social-thumb.png"
+      content="https://andrewyangintro.com/assets/social-thumb-videos.png"
     />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
