--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             really stands out.
           </p>
 
-          <p class="goal">
-            Short on time? Good news the first video is only 12 minutes and is a
-            great introduction to Andrew's vision.
+          <p class="cta-box">
+            <strong>Short on time?</strong> Good news the first video is only 12
+            minutes long and is a great introduction to Andrew's vision.
           </p>
 
           <p>
@@ -97,24 +97,22 @@
           <h2>
             Why share this?
           </h2>
-          <p>
+          <!-- <p>
             I am an idealist. When I shuffle off this mortal coil, I hope that
             my country, and the world, are firmly on the path of being a better
             place than when I was born.
-          </p>
+          </p> -->
           <p>
             I would not normally share political content, but I think this is
             the most important vision a presidential candidate has expressed in
             my lifetime.
           </p>
-          <p
-            class="goal fdmath-link"
-            style="background-color: rgba(220, 20, 60, 0.233);"
-          >
-            Curious about the math behind the Freedom Dividend?<br />
-            <a href="https://freedom-dividend.com/"
-              >Freedom-dividend.com breaks it down (spoiler it works out)!
-            </a>
+          <p class="cta-box">
+            <strong>Learn the math behind the Freedom Dividend</strong><br />
+            <a href="https://freedom-dividend.com/">Freedom-dividend.com</a>
+            presents a rigorous, detailed, peer-reviewed and transparent cost
+            analysis of Andrew Yang's Universal Basic Income (UBI) plan — the
+            Freedom Dividend.
           </p>
         </section>
         <section class="videos">
