--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>An Introduction to Andrew Yang and his Platform</title>
+    <title>A Collection of Popular Andrew Yang YouTube Videos</title>
     <link rel="stylesheet" href="main.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap"
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:site_name"
-      content="A collection of popular Andrew Yang YouTube videos"
+      content="A Collection of Popular Andrew Yang YouTube Videos"
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
     <meta property="og:url" content="https://andrewyangintro.com" />
     <meta
       property="og:title"
-      content="A collection of popular Andrew Yang YouTube videos"
+      content="A Collection of Popular Andrew Yang YouTube Videos"
     />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
@@ -51,7 +51,7 @@
     />
     <meta
       name="twitter:title"
-      content="A collection of popular Andrew Yang YouTube videos"
+      content="A Collection of Popular Andrew Yang YouTube Videos"
     />
     <meta
       name="twitter:image"
